fixed mobile spacing

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -6,6 +6,7 @@ sass --watch assets/sass/style.scss assets/css/style.css
 
 ////////////////////////////////////////variables
 ////////////////////global
+$shadow: rgba(34, 34, 34, .5);
 
 ////////////////////christmas
 $christmas-1: #36312c;
@@ -38,9 +39,9 @@ body {
 }
 
 header {
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: 900;
-  font-family: fantasy;
+  font-family: Georgia, Times, serif;
   text-align: center;
   margin: 5rem 0;
   & #event {
@@ -57,8 +58,8 @@ header {
   &__hours, 
   &__minutes, 
   &__seconds {
-    flex: 0 0 80px;
-    height: 80px;
+    flex: 0 0 75px;
+    height: 75px;
     text-align: center;
     font-size: 4rem;
     font-family: math;
@@ -67,6 +68,8 @@ header {
     align-items: center;
     position: relative;
     border: 1px solid;
+    border-radius: 12px;
+    box-shadow: 0 1rem 1.5rem $shadow;
   }
   &__days::after{
     content: "days";
@@ -85,7 +88,9 @@ header {
   &__minutes::after, 
   &__seconds::after {
     position: absolute;
-    bottom: -2.5rem;
+    bottom: -3rem;
+    left: 50%;
+    transform: translateX(-50%);
     font-size: 2rem;
   }
 }
